--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div class="first font_adjustment">Click Me!</div>
-        <div class="second font_adjustment">No, Click me</div>
+        <button class="first font_adjustment">Click Me!</button>
+        <button class="second font_adjustment">No, Click me</button>
     </body>
 </html>
